[EDP-DDM-20949] added null file name handling
Change-Id: I72fe16f5d89d694f2e24fbff86b4201728fd5943